--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<h1>Oliver Brummel</h1>
+<p>Oliver Brummel</p>
 
 <router-outlet></router-outlet>
