--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,8 +25,8 @@ body {
     height: 100vh;
     background: repeating-linear-gradient(
       0deg,
-      rgba(black, 0.15),
-      rgba(black, 0.15) 1px,
+      rgba(#000, 0.15),
+      rgba(#000, 0.15) 1px,
       transparent 1px,
       transparent 2px
     );
