--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,102 +5,6 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: #000;
-  background-image: radial-gradient(
-    rgba(0, 150, 0, 0.75), #000 100%
-  );
-  color: #fff;
-  font: 1rem Inconsolata, monospace;
-  height: 100vh;
-  padding: 12px;
-  text-shadow: 0 0 5px #C8C8C8;
-
-  &::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: repeating-linear-gradient(
-      0deg,
-      rgba(#000, 0.15),
-      rgba(#000, 0.15) 1px,
-      transparent 1px,
-      transparent 2px
-    );
-    animation: flicker 0.15s infinite;
-  }
-}
-
-::selection {
-  background-color: #0080FF;
-  text-shadow: none;
-}
-
-@keyframes flicker {
-  0% {
-    opacity: 0.27861;
-  }
-  5% {
-    opacity: 0.34769;
-  }
-  10% {
-    opacity: 0.23604;
-  }
-  15% {
-    opacity: 0.90626;
-  }
-  20% {
-    opacity: 0.18128;
-  }
-  25% {
-    opacity: 0.83891;
-  }
-  30% {
-    opacity: 0.65583;
-  }
-  35% {
-    opacity: 0.67807;
-  }
-  40% {
-    opacity: 0.26559;
-  }
-  45% {
-    opacity: 0.84693;
-  }
-  50% {
-    opacity: 0.96019;
-  }
-  55% {
-    opacity: 0.08594;
-  }
-  60% {
-    opacity: 0.20313;
-  }
-  65% {
-    opacity: 0.71988;
-  }
-  70% {
-    opacity: 0.53455;
-  }
-  75% {
-    opacity: 0.37288;
-  }
-  80% {
-    opacity: 0.71428;
-  }
-  85% {
-    opacity: 0.70419;
-  }
-  90% {
-    opacity: 0.7003;
-  }
-  95% {
-    opacity: 0.36108;
-  }
-  100% {
-    opacity: 0.24387;
-  }
+html {
+  font-size: 1rem;
 }
