tweak font-size and line-height

--- a/src/app/terminal/terminal.component.scss
+++ b/src/app/terminal/terminal.component.scss
@@ -4,8 +4,9 @@
     rgba(0, 150, 0, 0.75), #000 100%
   );
   color: #fff;
-  font-family: Inconsolata, monospace;
+  font: .875rem Inconsolata, monospace;
   height: 100vh;
+  line-height: 1.3;
   padding: 12px;
   text-shadow: 0 0 5px #C8C8C8;
 
