Add initial style for displayed user input

--- a/src/app/terminal/terminal.component.html
+++ b/src/app/terminal/terminal.component.html
@@ -3,5 +3,12 @@
     <span>Last login: </span>
     <span>{{ currentDateTime | date: 'medium' }}</span>
   </p>
-  <p>Welcome to the best terminal ever.</p>
+  <p>Welcome to the best terminal ever</p>
+
+  <br>
+  <br>
+  <p>
+    <span>oliverbrummel-website:~$</span>&nbsp;
+    <span class="user-input__display">{{ userInput }}</span>
+  </p>
 </section>
