--- a/src/app/terminal/terminal.component.html
+++ b/src/app/terminal/terminal.component.html
@@ -8,7 +8,7 @@
   <br>
   <br>
   <p>
-    <span>oliverbrummel-website:~$</span>&nbsp;
+    <span>oliverbrummel-website:~$&nbsp;</span>
     <span class="user-input--display" [innerHTML]="displayedOutput"></span>
   </p>
 
