simplified complicated input string logic with regex

--- a/src/app/terminal/terminal.component.html
+++ b/src/app/terminal/terminal.component.html
@@ -13,7 +13,7 @@
   </p>
 
   <div id="hiddenInputWrapper">
-    <input #hiddenInput [formControl]="hiddenInputEl" autofocus type="text" />
+    <input #hiddenInput [formControl]="terminalInputControl" autofocus type="text" />
   </div>
 
 </section>
