use background instead of border-right

--- a/src/app/terminal/terminal.component.html
+++ b/src/app/terminal/terminal.component.html
@@ -5,7 +5,7 @@
   </p>
   <p *ngIf="pretendLoaded">
     <span>oliverbrummel-website:~$&nbsp;</span>
-    <span class="user-input--display" [innerHTML]="displayedOutput"></span>
+    <span [innerHTML]="displayedOutput"></span>
   </p>
 
   <div id="hiddenInputWrapper">
