--- a/src/app/terminal/terminal.component.scss
+++ b/src/app/terminal/terminal.component.scss
@@ -99,8 +99,8 @@
   }
 }
 
-.user-input--display {
-  border-right: .5em solid #fff;
+.char-span {
+  background-color: #fff;
 }
 
 #hiddenInputWrapper {
