Add ids and pipe to allow for injected element style control

--- a/src/app/terminal/terminal.component.html
+++ b/src/app/terminal/terminal.component.html
@@ -5,7 +5,7 @@
   </p>
   <p *ngIf="pretendLoaded">
     <span>oliverbrummel-website:~$&nbsp;</span>
-    <span [innerHTML]="displayedOutput"></span>
+    <span [innerHTML]="displayedOutput | safe: 'html'"></span>
   </p>
 
   <div id="hiddenInputWrapper">
